create imitation of register

--- a/AviaSales/app/src/main/res/layout/fragment_register.xml
+++ b/AviaSales/app/src/main/res/layout/fragment_register.xml
@@ -10,7 +10,7 @@
 
 
     <LinearLayout
-        android:id="@+id/registrationLayoutLogin"
+        android:id="@+id/registrationLayout"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -39,7 +39,17 @@
         android:hint="@string/registrationEnterPassword"
         />
 
-    <LinearLayout
+        <TextView
+            android:id="@+id/registrationTvError"
+            android:textColor="@android:color/holo_red_dark"
+            android:text="Error"
+            android:textSize="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"/>
+
+
+        <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_marginTop="15dp"
