change progressbar style

--- a/AviaSales/app/src/main/res/layout/fragment_register.xml
+++ b/AviaSales/app/src/main/res/layout/fragment_register.xml
@@ -12,6 +12,7 @@
     <LinearLayout
         android:id="@+id/registrationLayout"
         android:orientation="vertical"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -72,16 +73,20 @@
     </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/registrationProgressBar"
-            android:layout_gravity="center_horizontal"/>
-    </LinearLayout>
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"/>
+
+
+    </RelativeLayout>
+
 
 </LinearLayout>
