--- a/AviaSales/app/src/main/res/layout/fragment_register.xml
+++ b/AviaSales/app/src/main/res/layout/fragment_register.xml
@@ -28,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/EditTextStyle"
+        android:inputType="textEmailAddress"
         android:hint="@string/registrationEnterEmail"
         />
 
