--- a/AviaSales/app/src/main/res/values/styles.xml
+++ b/AviaSales/app/src/main/res/values/styles.xml
@@ -30,4 +30,13 @@
         <item name="android:layout_marginRight">10dp</item>
     </style>
 
+    <style name="SearchEditTextStyle" parent="android:Widget.TextView">
+        <item name="android:layout_weight">1</item>
+        <item name="android:inputType">textCapWords</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_marginRight">5dp</item>
+    </style>
+
+
+
 </resources>
