--- a/AviaSales/app/src/main/res/layout/view_flight_item.xml
+++ b/AviaSales/app/src/main/res/layout/view_flight_item.xml
@@ -5,6 +5,7 @@
               android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/search_flight_container"
         android:layout_margin="15dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -17,7 +18,7 @@
             <TextView
                 android:id="@+id/search_flight_city_to"
                 android:text="CityTo"
-                android:textSize="30dp"
+                android:textSize="20dp"
                 android:textColor="@android:color/holo_blue_dark"
                 android:layout_alignParentLeft="true"
                 android:layout_width="wrap_content"
@@ -26,7 +27,7 @@
             <TextView
                 android:id="@+id/search_flight_city_from"
                 android:text="CityFrom"
-                android:textSize="30dp"
+                android:textSize="20dp"
                 android:textColor="@android:color/holo_blue_dark"
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
@@ -45,7 +46,7 @@
             <TextView
                 android:id="@+id/search_flight_date_dep"
                 android:text="dateDep"
-                android:textSize="25dp"
+                android:textSize="15dp"
                 android:textColor="@android:color/holo_red_light"
                 android:layout_alignParentLeft="true"
                 android:layout_width="wrap_content"
@@ -54,7 +55,7 @@
             <TextView
                 android:id="@+id/search_flight_date_arr"
                 android:text="dateArr"
-                android:textSize="30dp"
+                android:textSize="15dp"
                 android:layout_alignParentRight="true"
                 android:textColor="@android:color/holo_red_light"
                 android:layout_width="wrap_content"
@@ -77,14 +78,14 @@
                 <TextView
                     android:id="@+id/search_flight_price_pert_ticket"
                     android:text="200"
-                    android:textSize="15dp"
+                    android:textSize="14dp"
                     android:textColor="@android:color/holo_purple"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
                 <TextView
                     android:text="$ per ticket"
-                    android:textSize="15dp"
+                    android:textSize="14dp"
                     android:textColor="@android:color/holo_purple"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -101,7 +102,7 @@
 
                 <TextView
                     android:text="Free place count: "
-                    android:textSize="15dp"
+                    android:textSize="14dp"
                     android:textColor="@android:color/holo_purple"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -109,7 +110,7 @@
                 <TextView
                     android:id="@+id/search_flight_free_place_count"
                     android:text="10"
-                    android:textSize="15dp"
+                    android:textSize="14dp"
                     android:layout_marginRight="20dp"
                     android:textColor="@android:color/holo_purple"
                     android:layout_alignParentLeft="true"
