add divider in flight view

--- a/AviaSales/app/src/main/res/layout/view_flight_item.xml
+++ b/AviaSales/app/src/main/res/layout/view_flight_item.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:divider="?android:dividerHorizontal"
+              android:showDividers="middle"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    
     <LinearLayout
         android:id="@+id/search_flight_container"
         android:layout_margin="15dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -120,6 +124,14 @@
             </LinearLayout>
 
         </RelativeLayout>
+        
+        <LinearLayout
+            android:layout_marginTop="3dp"
+            android:background="@android:color/darker_gray"
+            android:layout_width="match_parent"
+            android:layout_height="1dp">
+
+        </LinearLayout>
 
     </LinearLayout>
 
