--- a/AviaSales/app/src/main/res/layout/view_flight_item.xml
+++ b/AviaSales/app/src/main/res/layout/view_flight_item.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:divider="?android:dividerHorizontal"
-              android:showDividers="middle"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -10,6 +8,9 @@
     <LinearLayout
         android:id="@+id/search_flight_container"
         android:layout_margin="15dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:clickable="true"
         android:background="@drawable/flight_item_selector"
         android:orientation="vertical"
         android:layout_width="match_parent"
