--- a/AviaSales/app/src/main/res/layout/view_search_panel.xml
+++ b/AviaSales/app/src/main/res/layout/view_search_panel.xml
@@ -57,6 +57,28 @@
 
     </LinearLayout>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/search_button_ok"
+                android:text="@android:string/ok"
+                style="@style/ButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/search_button_clear"
+                android:text="@string/clear"
+                style="@style/ButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
