--- a/AviaSales/app/src/main/res/menu/activity_main_drawer.xml
+++ b/AviaSales/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,33 +3,23 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_search_flight"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import"/>
+            android:title="Search flights"/>
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_booking_history"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery"/>
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow"/>
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools"/>
+            android:title="Booking history"/>
+
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Acount">
         <menu>
+
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share"/>
-            <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send"/>
+                android:title="Logout"/>
         </menu>
     </item>
 
