--- a/AviaSales/app/src/main/res/layout/fragment_login.xml
+++ b/AviaSales/app/src/main/res/layout/fragment_login.xml
@@ -59,8 +59,8 @@
             android:layout_height="wrap_content"/>
 
         <Button
-            android:id="@+id/loginButtonCancel"
-            android:text="@android:string/cancel"
+            android:id="@+id/loginButtonRegister"
+            android:text="@string/registration"
             style="@style/ButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
