show progress bar

--- a/AviaSales/app/src/main/res/layout/fragment_tickets.xml
+++ b/AviaSales/app/src/main/res/layout/fragment_tickets.xml
@@ -5,6 +5,7 @@
               android:layout_height="match_parent">
 
     <ScrollView
+        android:id="@+id/search_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -19,5 +20,20 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/search_progress_bar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"/>
+
+
+    </RelativeLayout>
 
 </LinearLayout>
