first try to make mult

--- a/AviaSales/app/src/main/res/layout/view_search_panel.xml
+++ b/AviaSales/app/src/main/res/layout/view_search_panel.xml
@@ -79,6 +79,21 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/search_button_book"
+                android:text="@string/buy"
+                style="@style/ButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
