--- a/AviaSales/app/src/main/res/layout/view_search_panel.xml
+++ b/AviaSales/app/src/main/res/layout/view_search_panel.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/searchEditCityTo"
+                android:id="@+id/searchEditCityFrom"
                 android:hint="@string/city_from"
                 style="@style/SearchEditTextStyle"
                 android:layout_width="match_parent"
@@ -24,7 +24,7 @@
                 />
 
             <EditText
-                android:id="@+id/editCityFrom"
+                android:id="@+id/searchEditCityTo"
                 android:hint="@string/city_to"
                 style="@style/SearchEditTextStyle"
                 android:layout_width="match_parent"
@@ -49,11 +49,72 @@
 
         <Spinner
             android:id="@+id/search_spn"
+            android:visibility="gone"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
         </Spinner>
+            <LinearLayout
+                android:id="@+id/search_ll_to"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+
+                android:text="@string/dateDepart"
+                android:gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:textColor="@android:color/holo_green_dark"
+                android:layout_height="wrap_content"/>
+
+                <TextView
+
+                    android:id="@+id/search_date_dep_to"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_horizontal"
+                    android:text="@string/dateDepart"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
+        </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/search_ll_back"
+                android:layout_weight="1"
+                android:visibility="gone"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+
+                    android:textColor="@android:color/holo_green_dark"
+                    android:gravity="center_horizontal"
+                    android:text="@string/dateDepartBack"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+
+                    android:id="@+id/search_date_dep_back"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_horizontal"
+                    android:text="@string/dateDepart"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
+
+
+            </LinearLayout>
+
+
 
     </LinearLayout>
 
