--- a/AviaSales/app/src/main/res/layout/fragment_login.xml
+++ b/AviaSales/app/src/main/res/layout/fragment_login.xml
@@ -42,6 +42,7 @@
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:layout_gravity="center_horizontal"/>
 
 
