--- a/AviaSales/app/src/main/res/layout/fragment_register.xml
+++ b/AviaSales/app/src/main/res/layout/fragment_register.xml
@@ -49,6 +49,7 @@
             android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:layout_gravity="center_horizontal"/>
 
 
